--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "url": "https://github.com/eternity-dev"
   },
   "dependencies": {
+    "@types/node": "^20.8.4",
+    "dotenv": "^16.3.1",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
