--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "url": "https://github.com/eternity-dev"
   },
   "dependencies": {
-    "@types/node": "^20.8.4",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "module-alias": "^2.2.3",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/compression": "^1.7.3",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.19",
+    "@types/morgan": "^1.9.6",
+    "@types/node": "^20.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
@@ -39,7 +48,7 @@
     "lint": "eslint",
     "start": "bun build/index.js"
   },
-  "_moduleAlias": {
+  "_moduleAliases": {
     "@": "./src/"
   }
 }
